syntax = "proto3";

option go_package = "github.com/snet-commerce/merchant/proto";

package proto;

import "google/protobuf/timestamp.proto";

service MerchantService {
  rpc CreateMerchant(CreateMerchantRequest) returns (CreateMerchantResponse);
  rpc GetMerchant(GetMerchantRequest) returns (GetMerchantResponse);
  rpc UpdateMerchant(UpdateMerchantRequest) returns (UpdateMerchantResponse);
  rpc GetMerchants(GetMerchantsRequest) returns (GetMerchantsResponse);
  rpc DeleteMerchant(DeleteMerchantRequest) returns (DeleteMerchantResponse);
}

message Merchant {
  string id = 1;
  string name = 2;
  optional string description = 3;
  string primary_email = 4;
  optional string secondary_email = 5;
  string primary_number = 6;
  optional string secondary_number = 7;
  bool active = 8;
  string tenant = 9;
  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;
}

message CreateMerchantRequest {
  string name = 1;
  optional string description = 2;
  string primary_email = 3;
  optional string secondary_email = 4;
  string primary_number = 5;
  optional string secondary_number = 6;
  bool active = 7;
}

message CreateMerchantResponse {
    Merchant merchant = 1;
}

message GetMerchantRequest {
  string id = 1;
}

message GetMerchantResponse {
  Merchant merchant = 1;
}

message UpdateMerchantRequest {
  string id = 1;
  string name = 2;
  optional string description = 3;
  string primary_email = 4;
  optional string secondary_email = 5;
  string primary_number = 6;
  optional string secondary_number = 7;
  bool active = 8;
}

message UpdateMerchantResponse {
  Merchant merchant = 1;
}

message GetMerchantsRequest {
  optional string name = 1;
  optional string email = 2;
  optional string number = 3;
  optional bool active = 4;
  optional string tenant = 5;
  int32 limit = 6;
  int32 offset = 7;
}

message GetMerchantsResponse {
  repeated Merchant merchants = 1;
}

message DeleteMerchantRequest {
  string id = 1;
}

message DeleteMerchantResponse {}